--- a/public/index.html
+++ b/public/index.html
@@ -5,26 +5,28 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- SEO Meta Tags -->
+    <title>Agri-Smart - Sistem Hidroponik Pintar Berbasis IoT & AI</title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Agri-Smart adalah sistem hidroponik pintar berbasis IoT dan AI yang membantu petani mengelola tanaman dengan monitoring real-time, analisis cerdas, dan otomasi presisi untuk ketahanan pangan Indonesia."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="keywords" content="hidroponik, smart farming, IoT, AI, pertanian modern, Agri-Smart, monitoring tanaman, sistem otomatis, ketahanan pangan" />
+    <meta name="author" content="Kelompok Al-Jazari - Sekolah Impian" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Open Graph (Facebook) -->
+    <meta property="og:title" content="Agri-Smart - Sistem Hidroponik Pintar Berbasis IoT & AI" />
+    <meta property="og:description" content="Transformasi pertanian Indonesia dengan teknologi monitoring real-time dan analisis AI untuk hasil panen optimal." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://agri-smart.vercel.app" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
